[project]
name = "today-eat-what"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "langchain-mcp-adapters>=0.0.25",
    "langchain-openai>=0.1.7",
    "langchain-community>=0.4.1",
    "openai>=1.35.0",
]
